feat: add sgp30

--- a/src/Makefile
+++ b/src/Makefile
@@ -54,7 +54,8 @@ SRC_PATH := ./start.s ./main.c \
 		./components/timer/src/timer.c \
 		./components/pwm/src/pwm.c \
 		./components/i2c/src/i2c.c \
-		./devices/st7735/src/st7735.c
+		./devices/st7735/src/st7735.c \
+		./devices/gy_sgp30/src/sgp30.c \
 
 CFLAGS += -I./configs \
 		-I./components/libc/include \
@@ -66,6 +67,7 @@ CFLAGS += -I./configs \
 		-I./components/pwm/include \
 		-I./components/i2c/include \
 		-I./devices/st7735/include \
+		-I./devices/gy_sgp30/include \
 		
 # 链接脚本路径
 LDS_PATH := ./sections.lds
