feat: add target type config

--- a/tools/kconfig/Kconfig
+++ b/tools/kconfig/Kconfig
@@ -137,6 +137,29 @@ menu "Build Configuration"
         default n
         help
           Show detailed compilation commands
+    
+    choice
+        prompt "link target"
+        default LINK_TARGET_FLASH
+        help
+          choose the storage area used for firmware linking
+    config LINK_TARGET_FLASH
+        bool "FLASH"
+    config LINK_TARGET_SRAM
+        bool "SRAM"
+    config LINK_TARGET_MEM
+        bool "MEM"
+    endchoice
+
+    config LINK_ADDRESS
+        hex "link address"
+        default 0x30000000 if LINK_TARGET_FLASH
+        default 0x00000000 if LINK_TARGET_SRAM
+        default 0x80000000 if LINK_TARGET_MEM
+        help
+          choose the starting address for firmware linking
+          when selecting a different "link target", the default address will change accordingly.
+          If you need to customize the address, please enter the hexadecimal address directly here.
 endmenu
 
 menu "Firmware Configuration"
